namespace Agnostics;

public class AuthenticationResponseDto
{
    public string token { get; set; }
}